# paolobietolini.github.io

./: .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: dbt-ci.yml
c/: README.md  _config.yml
c/antirez-impariamo_il_c/lezione03/: lezione3.md
c/antirez-impariamo_il_c/lezione04/: clear.c  lezione4.md
c/antirez-impariamo_il_c/lezione05/: garbage  garbage.c  to_uppercase.c
c/antirez-impariamo_il_c/lezioni/: _config.yaml
c/exercises/: index.md
c/exercises/notes/: linked_lists.md  puntatori.md
c/pointers/: doppi_puntatori.md  libri  libri.c  puntatori.md  remove_emoji  remove_emoji.c  rubrica  rubrica.c
data-engineering/: README.md  data_engineering_study_plan.docx
data-engineering/career/: certification-guide.md  transition-plan.md
data-engineering/docker/: basics.md
data-engineering/gcp/: certification-guide.md
data-engineering/sql/: reference.md
data-engineering/zoomcamp/final-project/: .dockerignore  IDEAS.md  PLAN.md  pyproject.toml  steps.md
data-engineering/zoomcamp/final-project/backend/: Dockerfile  docker-compose.yml
data-engineering/zoomcamp/final-project/dbt/: dbt_project.yml
data-engineering/zoomcamp/final-project/dbt/models/: notes.txt
data-engineering/zoomcamp/final-project/dbt/models/staging/: schema.yml  sources.yml  stg_events.sql  stg_order_items.sql  stg_orders.sql  stg_users.sql
data-engineering/zoomcamp/final-project/scripts/: data_loader.py  generate_synthetic_data.py  load_to_bq.py
data-engineering/zoomcamp/final-project/terraform/: main.tf  variables.tf
go/: ex.go
(+123 files in other folders)
